--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 18 02:05:16 2018</p>
+         Last Run: Wed Jul 18 05:05:21 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Central Memorial High School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:00PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -33,48 +33,48 @@
                         <td>Thunderstorm</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>61</td>
-                        <td>51</td>
+                        <td>86</td>
+                        <td>55</td>
                         <td>3</td>
                         <td>13</td>
-                        <td>ESE</td>
+                        <td>SE</td>
                         <td>75</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
-                        <td>22</td>
-                        <td>22</td>
+                        <td>21</td>
+                        <td>21</td>
                         <td>55</td>
-                        <td>52</td>
+                        <td>57</td>
                         <td>2</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>ESE</td>
-                        <td>63</td>
+                        <td>57</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
-                        <td>Chance of a Thunderstorm</td>
+                        <td>Mostly Cloudy</td>
                         <td>20</td>
                         <td>20</td>
-                        <td>46</td>
-                        <td>57</td>
+                        <td>24</td>
+                        <td>58</td>
                         <td>1</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>80</td>
+                        <td>76</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Chance of a Thunderstorm</td>
+                        <td>Mostly Cloudy</td>
                         <td>20</td>
                         <td>20</td>
-                        <td>43</td>
-                        <td>58</td>
+                        <td>24</td>
+                        <td>60</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>ESE</td>
-                        <td>83</td>
+                        <td>61</td>
                      </tr>
                   </tbody>
                </table>
@@ -120,7 +120,7 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "22",
-                 "22",
+                 "21",
                  "20",
                  "20"
                ]
@@ -132,7 +132,7 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "22",
-                 "22",
+                 "21",
                  "20",
                  "20"
                ]
@@ -186,10 +186,10 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "61",
+                 "86",
                  "55",
-                 "46",
-                 "43"
+                 "24",
+                 "24"
                ]
              },
              {
@@ -197,10 +197,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "51",
-                 "52",
+                 "55",
                  "57",
-                 "58"
+                 "58",
+                 "60"
                ]
              },
              {
@@ -209,9 +209,9 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "75",
-                 "63",
-                 "80",
-                 "83"
+                 "57",
+                 "76",
+                 "61"
                ]
              }
            ]
@@ -228,7 +228,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 18 02:05:16 2018</p>
+         Last Run: Wed Jul 18 05:05:21 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -262,10 +262,10 @@
                      <tr>
                         <td>11:00 AM</td>
                         <td>Clear</td>
-                        <td>19</td>
-                        <td>19</td>
+                        <td>18</td>
+                        <td>18</td>
                         <td>0</td>
-                        <td>37</td>
+                        <td>38</td>
                         <td>4</td>
                         <td>11</td>
                         <td>W</td>
@@ -274,10 +274,10 @@
                      <tr>
                         <td>12:00 PM</td>
                         <td>Clear</td>
-                        <td>20</td>
-                        <td>20</td>
+                        <td>19</td>
+                        <td>19</td>
                         <td>2</td>
-                        <td>33</td>
+                        <td>32</td>
                         <td>6</td>
                         <td>11</td>
                         <td>W</td>
@@ -289,7 +289,7 @@
                         <td>20</td>
                         <td>20</td>
                         <td>15</td>
-                        <td>31</td>
+                        <td>30</td>
                         <td>6</td>
                         <td>14</td>
                         <td>W</td>
@@ -352,8 +352,8 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "17",
+                 "18",
                  "19",
-                 "20",
                  "20",
                  "21"
                ]
@@ -365,8 +365,8 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "17",
+                 "18",
                  "19",
-                 "20",
                  "20",
                  "21"
                ]
@@ -434,9 +434,9 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "44",
-                 "37",
-                 "33",
-                 "31",
+                 "38",
+                 "32",
+                 "30",
                  "30"
                ]
              },
@@ -466,7 +466,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 18 02:05:16 2018</p>
+         Last Run: Wed Jul 18 05:05:21 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -487,39 +487,39 @@
                   <tbody>
                      <tr>
                         <td>07:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>6</td>
-                        <td>28</td>
+                        <td>5</td>
+                        <td>30</td>
                         <td>1</td>
                         <td>14</td>
                         <td>SE</td>
-                        <td>26</td>
+                        <td>33</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>22</td>
                         <td>22</td>
                         <td>6</td>
-                        <td>32</td>
+                        <td>34</td>
                         <td>0</td>
-                        <td>14</td>
-                        <td>SE</td>
-                        <td>27</td>
+                        <td>13</td>
+                        <td>ESE</td>
+                        <td>32</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>20</td>
                         <td>20</td>
                         <td>2</td>
-                        <td>39</td>
+                        <td>41</td>
                         <td>0</td>
-                        <td>14</td>
-                        <td>ESE</td>
-                        <td>27</td>
+                        <td>13</td>
+                        <td>E</td>
+                        <td>30</td>
                      </tr>
                   </tbody>
                </table>
@@ -627,7 +627,7 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "6",
+                 "5",
                  "6",
                  "2"
                ]
@@ -637,9 +637,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "28",
-                 "32",
-                 "39"
+                 "30",
+                 "34",
+                 "41"
                ]
              },
              {
@@ -647,9 +647,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "26",
-                 "27",
-                 "27"
+                 "33",
+                 "32",
+                 "30"
                ]
              }
            ]
