--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 18 05:05:21 2018</p>
+         Last Run: Wed Jul 18 06:05:10 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Central Memorial High School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:00PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -33,8 +33,8 @@
                         <td>Thunderstorm</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>86</td>
-                        <td>55</td>
+                        <td>84</td>
+                        <td>54</td>
                         <td>3</td>
                         <td>13</td>
                         <td>SE</td>
@@ -46,19 +46,19 @@
                         <td>21</td>
                         <td>21</td>
                         <td>55</td>
-                        <td>57</td>
+                        <td>55</td>
                         <td>2</td>
-                        <td>14</td>
+                        <td>16</td>
                         <td>ESE</td>
-                        <td>57</td>
+                        <td>56</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>20</td>
                         <td>20</td>
-                        <td>24</td>
-                        <td>58</td>
+                        <td>19</td>
+                        <td>57</td>
                         <td>1</td>
                         <td>13</td>
                         <td>ESE</td>
@@ -69,12 +69,12 @@
                         <td>Mostly Cloudy</td>
                         <td>20</td>
                         <td>20</td>
-                        <td>24</td>
+                        <td>13</td>
                         <td>60</td>
                         <td>0</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>61</td>
+                        <td>60</td>
                      </tr>
                   </tbody>
                </table>
@@ -186,10 +186,10 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "86",
+                 "84",
                  "55",
-                 "24",
-                 "24"
+                 "19",
+                 "13"
                ]
              },
              {
@@ -197,9 +197,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "54",
                  "55",
                  "57",
-                 "58",
                  "60"
                ]
              },
@@ -209,9 +209,9 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "75",
-                 "57",
+                 "56",
                  "76",
-                 "61"
+                 "60"
                ]
              }
            ]
@@ -228,7 +228,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 18 05:05:21 2018</p>
+         Last Run: Wed Jul 18 06:05:10 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -253,7 +253,7 @@
                         <td>17</td>
                         <td>17</td>
                         <td>0</td>
-                        <td>44</td>
+                        <td>45</td>
                         <td>3</td>
                         <td>10</td>
                         <td>W</td>
@@ -267,7 +267,7 @@
                         <td>0</td>
                         <td>38</td>
                         <td>4</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>W</td>
                         <td>7</td>
                      </tr>
@@ -281,31 +281,31 @@
                         <td>6</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>12</td>
+                        <td>11</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>20</td>
-                        <td>20</td>
+                        <td>Partly Cloudy</td>
+                        <td>21</td>
+                        <td>21</td>
                         <td>15</td>
                         <td>30</td>
-                        <td>6</td>
-                        <td>14</td>
+                        <td>7</td>
+                        <td>13</td>
                         <td>W</td>
-                        <td>62</td>
+                        <td>46</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Partly Cloudy</td>
                         <td>21</td>
                         <td>21</td>
                         <td>15</td>
-                        <td>30</td>
-                        <td>5</td>
+                        <td>29</td>
+                        <td>6</td>
                         <td>14</td>
                         <td>WNW</td>
-                        <td>75</td>
+                        <td>56</td>
                      </tr>
                   </tbody>
                </table>
@@ -354,7 +354,7 @@
                  "17",
                  "18",
                  "19",
-                 "20",
+                 "21",
                  "21"
                ]
              },
@@ -367,7 +367,7 @@
                  "17",
                  "18",
                  "19",
-                 "20",
+                 "21",
                  "21"
                ]
              }
@@ -433,11 +433,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "44",
+                 "45",
                  "38",
                  "32",
                  "30",
-                 "30"
+                 "29"
                ]
              },
              {
@@ -447,9 +447,9 @@
                "data":[
                  "3",
                  "7",
-                 "12",
-                 "62",
-                 "75"
+                 "11",
+                 "46",
+                 "56"
                ]
              }
            ]
@@ -466,7 +466,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 18 05:05:21 2018</p>
+         Last Run: Wed Jul 18 06:05:10 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -491,11 +491,11 @@
                         <td>24</td>
                         <td>24</td>
                         <td>5</td>
-                        <td>30</td>
+                        <td>29</td>
                         <td>1</td>
                         <td>14</td>
                         <td>SE</td>
-                        <td>33</td>
+                        <td>32</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -505,13 +505,13 @@
                         <td>6</td>
                         <td>34</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>ESE</td>
-                        <td>32</td>
+                        <td>31</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>20</td>
                         <td>20</td>
                         <td>2</td>
@@ -519,7 +519,7 @@
                         <td>0</td>
                         <td>13</td>
                         <td>E</td>
-                        <td>30</td>
+                        <td>29</td>
                      </tr>
                   </tbody>
                </table>
@@ -637,7 +637,7 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "30",
+                 "29",
                  "34",
                  "41"
                ]
@@ -647,9 +647,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "33",
                  "32",
-                 "30"
+                 "31",
+                 "29"
                ]
              }
            ]
