--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 18 06:05:10 2018</p>
+         Last Run: Wed Jul 18 07:05:10 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Central Memorial High School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:00PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -33,8 +33,8 @@
                         <td>Thunderstorm</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>84</td>
-                        <td>54</td>
+                        <td>83</td>
+                        <td>53</td>
                         <td>3</td>
                         <td>13</td>
                         <td>SE</td>
@@ -46,35 +46,35 @@
                         <td>21</td>
                         <td>21</td>
                         <td>55</td>
-                        <td>55</td>
-                        <td>2</td>
-                        <td>16</td>
-                        <td>ESE</td>
                         <td>56</td>
+                        <td>2</td>
+                        <td>14</td>
+                        <td>ESE</td>
+                        <td>60</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Chance of a Thunderstorm</td>
                         <td>20</td>
                         <td>20</td>
-                        <td>19</td>
+                        <td>35</td>
                         <td>57</td>
                         <td>1</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>76</td>
+                        <td>64</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Chance of a Thunderstorm</td>
                         <td>20</td>
                         <td>20</td>
-                        <td>13</td>
+                        <td>38</td>
                         <td>60</td>
                         <td>0</td>
                         <td>11</td>
-                        <td>ESE</td>
-                        <td>60</td>
+                        <td>E</td>
+                        <td>58</td>
                      </tr>
                   </tbody>
                </table>
@@ -186,10 +186,10 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "84",
+                 "83",
                  "55",
-                 "19",
-                 "13"
+                 "35",
+                 "38"
                ]
              },
              {
@@ -197,8 +197,8 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "54",
-                 "55",
+                 "53",
+                 "56",
                  "57",
                  "60"
                ]
@@ -209,9 +209,9 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "75",
-                 "56",
-                 "76",
-                 "60"
+                 "60",
+                 "64",
+                 "58"
                ]
              }
            ]
@@ -228,7 +228,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 18 06:05:10 2018</p>
+         Last Run: Wed Jul 18 07:05:11 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -267,9 +267,9 @@
                         <td>0</td>
                         <td>38</td>
                         <td>4</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>W</td>
-                        <td>7</td>
+                        <td>6</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -305,7 +305,7 @@
                         <td>6</td>
                         <td>14</td>
                         <td>WNW</td>
-                        <td>56</td>
+                        <td>55</td>
                      </tr>
                   </tbody>
                </table>
@@ -446,10 +446,10 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "3",
-                 "7",
+                 "6",
                  "11",
                  "46",
-                 "56"
+                 "55"
                ]
              }
            ]
@@ -466,7 +466,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 18 06:05:10 2018</p>
+         Last Run: Wed Jul 18 07:05:11 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -488,38 +488,38 @@
                      <tr>
                         <td>07:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>24</td>
-                        <td>24</td>
-                        <td>5</td>
-                        <td>29</td>
+                        <td>23</td>
+                        <td>23</td>
+                        <td>3</td>
+                        <td>31</td>
                         <td>1</td>
                         <td>14</td>
                         <td>SE</td>
-                        <td>32</td>
+                        <td>38</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>6</td>
-                        <td>34</td>
+                        <td>3</td>
+                        <td>35</td>
                         <td>0</td>
                         <td>14</td>
                         <td>ESE</td>
-                        <td>31</td>
+                        <td>43</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Clear</td>
-                        <td>20</td>
-                        <td>20</td>
-                        <td>2</td>
-                        <td>41</td>
+                        <td>Partly Cloudy</td>
+                        <td>19</td>
+                        <td>19</td>
+                        <td>22</td>
+                        <td>42</td>
                         <td>0</td>
                         <td>13</td>
-                        <td>E</td>
-                        <td>29</td>
+                        <td>ESE</td>
+                        <td>44</td>
                      </tr>
                   </tbody>
                </table>
@@ -563,9 +563,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "24",
+                 "23",
                  "22",
-                 "20"
+                 "19"
                ]
              },
              {
@@ -574,9 +574,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "24",
+                 "23",
                  "22",
-                 "20"
+                 "19"
                ]
              }
            ]
@@ -627,9 +627,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "5",
-                 "6",
-                 "2"
+                 "3",
+                 "3",
+                 "22"
                ]
              },
              {
@@ -637,9 +637,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "29",
-                 "34",
-                 "41"
+                 "31",
+                 "35",
+                 "42"
                ]
              },
              {
@@ -647,9 +647,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "32",
-                 "31",
-                 "29"
+                 "38",
+                 "43",
+                 "44"
                ]
              }
            ]
