--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 18 08:05:10 2018</p>
+         Last Run: Wed Jul 18 09:05:11 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Central Memorial High School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:00PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -33,8 +33,8 @@
                         <td>Thunderstorm</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>85</td>
-                        <td>54</td>
+                        <td>93</td>
+                        <td>55</td>
                         <td>3</td>
                         <td>14</td>
                         <td>SE</td>
@@ -45,24 +45,24 @@
                         <td>Chance of a Thunderstorm</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>48</td>
-                        <td>56</td>
+                        <td>52</td>
+                        <td>57</td>
                         <td>2</td>
                         <td>14</td>
                         <td>ESE</td>
-                        <td>60</td>
+                        <td>59</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
-                        <td>21</td>
-                        <td>21</td>
-                        <td>36</td>
-                        <td>55</td>
+                        <td>20</td>
+                        <td>20</td>
+                        <td>40</td>
+                        <td>56</td>
                         <td>1</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>63</td>
+                        <td>64</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -70,11 +70,11 @@
                         <td>20</td>
                         <td>20</td>
                         <td>41</td>
-                        <td>59</td>
+                        <td>60</td>
                         <td>0</td>
                         <td>13</td>
-                        <td>E</td>
-                        <td>59</td>
+                        <td>ESE</td>
+                        <td>58</td>
                      </tr>
                   </tbody>
                </table>
@@ -121,7 +121,7 @@
                "data":[
                  "22",
                  "21",
-                 "21",
+                 "20",
                  "20"
                ]
              },
@@ -133,7 +133,7 @@
                "data":[
                  "22",
                  "21",
-                 "21",
+                 "20",
                  "20"
                ]
              }
@@ -186,9 +186,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "85",
-                 "48",
-                 "36",
+                 "93",
+                 "52",
+                 "40",
                  "41"
                ]
              },
@@ -197,10 +197,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "54",
-                 "56",
                  "55",
-                 "59"
+                 "57",
+                 "56",
+                 "60"
                ]
              },
              {
@@ -209,9 +209,9 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "75",
-                 "60",
-                 "63",
-                 "59"
+                 "59",
+                 "64",
+                 "58"
                ]
              }
            ]
@@ -228,7 +228,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 18 08:05:10 2018</p>
+         Last Run: Wed Jul 18 09:05:11 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -466,7 +466,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 18 08:05:10 2018</p>
+         Last Run: Wed Jul 18 09:05:11 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -495,7 +495,7 @@
                         <td>1</td>
                         <td>14</td>
                         <td>SE</td>
-                        <td>35</td>
+                        <td>37</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -507,19 +507,19 @@
                         <td>0</td>
                         <td>14</td>
                         <td>ESE</td>
-                        <td>39</td>
+                        <td>41</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>20</td>
                         <td>20</td>
-                        <td>22</td>
-                        <td>41</td>
+                        <td>21</td>
+                        <td>42</td>
                         <td>0</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>40</td>
+                        <td>41</td>
                      </tr>
                   </tbody>
                </table>
@@ -629,7 +629,7 @@
                "data":[
                  "3",
                  "3",
-                 "22"
+                 "21"
                ]
              },
              {
@@ -639,7 +639,7 @@
                "data":[
                  "31",
                  "35",
-                 "41"
+                 "42"
                ]
              },
              {
@@ -647,9 +647,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "35",
-                 "39",
-                 "40"
+                 "37",
+                 "41",
+                 "41"
                ]
              }
            ]
